# vulture

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  bunfig.toml  package.json  tsconfig.base.json
.github/workflows/: harness.yml
apps/agent-sidecar/: package.json
apps/agent-sidecar/src/: agents.test.ts  agents.ts  browser-tools.test.ts  handler.test.ts  handler.ts  main.ts  rpc.test.ts  rpc.ts  smoke.ts  tools.ts
apps/desktop-e2e/: package.json
apps/desktop-e2e/src/: artifacts.test.ts  artifacts.ts  cli.test.ts  cli.ts  desktopDriver.test.ts  desktopDriver.ts  processes.test.ts  processes.ts  runner.test.ts  runner.ts  scenarios.ts  webdriver.test.ts  webdriver.ts
apps/desktop-shell/: Cargo.toml  tauri.conf.json
apps/desktop-shell/agent-packs/local-work/: SOUL.md  TOOLS.md
apps/desktop-shell/capabilities/: default.json
apps/desktop-shell/src/: agent_pack.rs  agent_store.rs  auth.rs  codex_auth.rs  commands.rs  gateway_client.rs  lib.rs  main.rs  model_auth.rs  runtime.rs  sidecar.rs  single_instance.rs  state.rs  supervisor.rs  tool_callback.rs  tool_executor.rs  workspace_store.rs
apps/desktop-shell/src/browser/: mod.rs  protocol.rs  relay.rs
apps/desktop-shell/src/tool_callback/: codex_routes.rs  mod.rs  model_auth_routes.rs
apps/desktop-shell/tests/: runtime_json_integration.rs
apps/desktop-ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-ui/src/: App.integration.test.tsx  App.tsx  browserTypes.ts  commandCenterTypes.ts  styles.css
apps/gateway/: package.json
apps/gateway/builtin-skills/: code-review-checklist.md  code-reviewer-role.md  systematic-debugging.md  task-decomposition.md  tdd-workflow.md  verification-before-done.md  web-research.md
apps/gateway/src/: env.test.ts  env.ts  main.ts  runs.integration.test.ts  server.integration.test.ts  server.test.ts  server.ts
crates/core/: Cargo.toml
crates/core/src/: agent.rs  error.rs  lib.rs  paths.rs  profile.rs  runtime.rs  storage.rs  workspace.rs
crates/tool-gateway/: Cargo.toml
crates/tool-gateway/src/: audit.rs  lib.rs  policy.rs  types.rs
docs/harness/: acceptance.md
docs/superpowers/: roadmap.md
docs/superpowers/plans/: 2026-04-26-agent-command-center-slice.md  2026-04-26-browser-control-slice.md  2026-04-26-l0-phase-1-infrastructure.md  2026-04-26-l0-phase-3a-backend.md  2026-04-26-vulture-foundation-slice.md  2026-04-27-l0-phase-3b-ui-llm.md  2026-04-27-l0-phase-3c-codex-subscription.md  2026-04-27-run-recovery.md  2026-04-28-context-management.md  2026-04-28-l2-memory-v2-file-first.md  2026-04-28-l2-memory-vector-store.md  2026-04-28-l2-skill-system.md  2026-04-28-l3a-mcp-client.md  2026-04-28-multimodal-messages.md  2026-04-30-agent-runtime-tool-contract-harness.md  2026-04-30-harness-engineering.md  2026-04-30-subagent-orchestration.md  2026-05-01-browser-tool-expansion.md  2026-05-01-web-access-service.md  2026-05-01-web-extract.md  2026-05-01-web-search-provider-settings.md  2026-05-02-subagent-productization.md  2026-05-03-coding-foundation.md  2026-05-03-model-settings-provider-auth.md  2026-05-03-preset-agents.md
docs/superpowers/reports/: 2026-04-26-agent-command-center-verification.md  2026-04-26-browser-control-slice-verification.md  2026-04-26-foundation-slice-verification.md
docs/superpowers/specs/: 2026-04-26-agent-command-center-design.md  2026-04-26-gateway-skeleton-design.md  2026-04-26-local-agent-platform-design.md  2026-04-27-l0-phase-3b-design.md  2026-04-27-l0-phase-3c-codex-subscription-design.md  2026-04-27-run-recovery-design.md  2026-04-28-context-management-design.md  2026-05-01-web-extract-design.md  (+15 more)
extensions/browser/: README.md  manifest.json
scripts/: harnessArtifacts.test.ts  harnessArtifacts.ts  harnessCatalog.test.ts  harnessCatalog.ts  harnessCi.test.ts  harnessCi.ts  harnessDoctor.test.ts  harnessDoctor.ts  harnessReport.test.ts  harnessReport.ts  harnessTrend.test.ts  harnessTrend.ts  test-setup.ts
(+390 files in other folders)
