[workspace]
resolver = "2"
members = [
  "apps/desktop-shell",
  "crates/core",
  "crates/tool-gateway"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["serde", "v4"] }
