[workspace]
resolver = "2"
members = [
  "apps/desktop-shell",
  "crates/core",
  "crates/tool-gateway"
]

[workspace.package]
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
keyring = "3"
libc = "0.2"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-build = "2"
thiserror = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
