[package]
name = "vulture-desktop-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
uuid.workspace = true
vulture-core = { path = "../../crates/core" }
vulture-tool-gateway = { path = "../../crates/tool-gateway" }

[dev-dependencies]
rusqlite.workspace = true
