[package]
name = "vulture-desktop-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
fs2.workspace = true
futures-lite = "2"
keyring.workspace = true
libc.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
uuid.workspace = true
vulture-core = { path = "../../crates/core" }
vulture-tool-gateway = { path = "../../crates/tool-gateway" }

[dev-dependencies]
futures-lite = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite.workspace = true
