[package]
name = "vulture-desktop-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "vulture_desktop_shell"
path = "src/lib.rs"

[[bin]]
name = "vulture-desktop-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
fs2.workspace = true
futures = "0.3"
futures-lite = "2"
keyring.workspace = true
libc.workspace = true
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tauri.workspace = true
tauri-plugin-dialog = "2"
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
urlencoding = "2"
uuid.workspace = true
vulture-core = { path = "../../crates/core" }
vulture-tool-gateway = { path = "../../crates/tool-gateway" }

[dev-dependencies]
futures-lite = "2"
rusqlite.workspace = true
